<resources>
    <string name="app_name">Dream Theater</string>
    <string name="item_movie_text_max_vote">/10</string>
    <string name="item_movie_text_rating_label">Rating:</string>
    <string name="item_movie_text_release_label">Release:</string>
    <string name="main_text_now_showing_label">Now Showing</string>
    <string name="detail_text_runtime_label">Runtime:</string>
    <string name="detail_text_production_label">Production:</string>
    <string name="main_text_adult_or_above">Adult or above</string>
    <string name="main_text_all_ages">All ages</string>
    <string name="detail_text_genre_label">Genre:</string>
    <string name="detail_text_overview_label">Overview</string>
</resources>