<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/image_detail_poster"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_rounded_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/mada_bold"
                android:textAllCaps="true"
                android:textColor="@color/light_black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_detail_poster"
                tools:text="Title Goes Here" />

            <TextView
                android:id="@+id/text_detail_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawablePadding="4dp"
                android:fontFamily="@font/mada_medium"
                android:gravity="center"
                android:textColor="@color/light_black"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_star_golden_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_detail_title"
                tools:text="10" />

            <TextView
                android:id="@+id/text_detail_max_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mada_regular"
                android:text="@string/item_movie_text_max_vote"
                android:textColor="@color/light_grey"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/text_detail_vote_average"
                app:layout_constraintStart_toEndOf="@id/text_detail_vote_average"
                app:layout_constraintTop_toTopOf="@id/text_detail_vote_average" />

            <TextView
                android:id="@+id/text_detail_vote_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/mada_regular"
                android:textColor="@color/light_grey"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/text_detail_vote_average"
                app:layout_constraintStart_toEndOf="@id/text_detail_max_vote"
                app:layout_constraintTop_toTopOf="@id/text_detail_vote_average"
                tools:text="(999 votes)" />

            <TextView
                android:id="@+id/text_detail_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mada_regular"
                android:text="@string/item_movie_text_rating_label"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_detail_vote_average" />

            <TextView
                android:id="@+id/text_detail_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/mada_regular"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/text_detail_rating_label"
                app:layout_constraintTop_toTopOf="@id/text_detail_rating_label"
                tools:text="Adult or above" />

            <TextView
                android:id="@+id/text_detail_genre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mada_regular"
                android:text="@string/detail_text_genre_label"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_detail_rating_label" />

            <TextView
                android:id="@+id/text_detail_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mada_regular"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/text_detail_genre_label"
                app:layout_constraintTop_toBottomOf="@id/text_detail_rating_label"
                tools:text="Action" />

            <TextView
                android:id="@+id/text_detail_release_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mada_regular"
                android:text="@string/item_movie_text_release_label"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_detail_genre_label" />

            <TextView
                android:id="@+id/text_detail_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mada_regular"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/text_detail_release_label"
                app:layout_constraintTop_toBottomOf="@id/text_detail_genre_label"
                tools:text="17 February 2021" />

            <TextView
                android:id="@+id/text_detail_runtime_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mada_regular"
                android:text="@string/detail_text_runtime_label"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_detail_release_label" />

            <TextView
                android:id="@+id/text_detail_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mada_regular"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/text_detail_runtime_label"
                app:layout_constraintTop_toBottomOf="@id/text_detail_release_label"
                tools:text="105 minutes" />

            <TextView
                android:id="@+id/text_detail_production_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mada_regular"
                android:text="@string/detail_text_production_label"
                android:textColor="@color/light_grey"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_detail_runtime_label" />

            <TextView
                android:id="@+id/text_detail_production"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mada_regular"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/text_detail_production_label"
                app:layout_constraintTop_toBottomOf="@id/text_detail_runtime_label"
                tools:text="Netflix" />

            <TextView
                android:id="@+id/text_detail_overview_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:fontFamily="@font/mada_medium"
                android:text="@string/detail_text_overview_label"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_detail_production" />

            <TextView
                android:id="@+id/text_detail_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mada_regular"
                android:lineSpacingMultiplier="1.2"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_detail_overview_label"
                tools:text="This is overview. Lorem ipsum." />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:id="@+id/view_detail_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/golden_poppy"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>