<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image_item_movie_poster"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:background="@drawable/background_rounded_image"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_item_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/mada_medium"
            android:maxLines="3"
            android:textAllCaps="true"
            android:textColor="@color/light_black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_item_movie_poster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title Goes Here" />

        <TextView
            android:id="@+id/text_item_movie_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:drawablePadding="4dp"
            android:fontFamily="@font/mada_medium"
            android:gravity="center"
            android:textColor="@color/light_black"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_star_golden_24dp"
            app:layout_constraintStart_toEndOf="@id/image_item_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/text_item_movie_title"
            tools:text="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mada_regular"
            android:text="@string/item_movie_text_max_vote"
            android:textColor="@color/light_grey"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/text_item_movie_vote_average"
            app:layout_constraintStart_toEndOf="@id/text_item_movie_vote_average"
            app:layout_constraintTop_toTopOf="@id/text_item_movie_vote_average" />

        <TextView
            android:id="@+id/text_item_movie_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mada_regular"
            android:text="@string/item_movie_text_rating_label"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/image_item_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/text_item_movie_vote_average" />

        <TextView
            android:id="@+id/text_item_movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/mada_regular"
            android:textColor="@color/light_black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/text_item_movie_rating_label"
            app:layout_constraintTop_toTopOf="@id/text_item_movie_rating_label"
            tools:text="Adult or above" />

        <TextView
            android:id="@+id/text_item_movie_release_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/mada_regular"
            android:text="@string/item_movie_text_release_label"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/image_item_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/text_item_movie_rating_label" />

        <TextView
            android:id="@+id/text_item_movie_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/mada_regular"
            android:textColor="@color/light_black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/text_item_movie_release_label"
            app:layout_constraintTop_toTopOf="@id/text_item_movie_release_label"
            tools:text="17 February 2021" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>